After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736807 - rtpbin: pad leaked in error case
rtpbin: pad leaked in error case
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 14:38 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-09-19 06:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpbin: do not leak encsink pad in error case (1.17 KB, patch)
2014-09-17 14:38 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-09-17 14:38:37 UTC
Created attachment 286385 [details] [review]
rtpbin: do not leak encsink pad in error case

pad is leaked in error case
Comment 1 Sebastian Dröge (slomo) 2014-09-18 09:50:30 UTC
commit f7ae4288a29daa6d5d44b26c27d4431e497d181a
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Sep 17 16:37:11 2014 +0200

    rtpbin: do not leak encsink pad in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736807