rtpbin: do not leak encsink pad in error case

https://bugzilla.gnome.org/show_bug.cgi?id=736807